--- a/creative-portfolio/src/components/AboutMeHeader/AboutMeHeader.css
+++ b/creative-portfolio/src/components/AboutMeHeader/AboutMeHeader.css
@@ -25,7 +25,7 @@
     height: 100%;
     color: rgb(0, 0, 0);
     background-color: #173442;
-    /* background-image: url("https://www.transparenttextures.com/patterns/batthern.png"); */
+    background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
 }
 
 .about-me-header-ul {
@@ -60,7 +60,7 @@
     align-items: center;
     justify-content: center;
     background-color: #081f2a;
-    /* background-image: url("https://www.transparenttextures.com/patterns/batthern.png"); */
+    background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
     border: none;
 }
 .fa-arrow-alt-circle-right {
