--- a/creative-portfolio/src/components/EducationCourses/EducationCourses.css
+++ b/creative-portfolio/src/components/EducationCourses/EducationCourses.css
@@ -1,5 +1,5 @@
 .education-courses-main-div {
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     color: white;
 }
@@ -9,14 +9,14 @@
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
-    min-height: 90%;
+    height:70%;
 }
 .education-courses-div div {
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 50%;
-    height: 100%;
+    height: 95%;
 }
 .education-courses-div h1{
     font-size: 32px;
@@ -37,8 +37,8 @@
 }
 .education-courses-div .courses-div {
     min-height: 90%;
-
 }
+
 .education-courses-div h4{
     width: 70%;
     font-size: 20px;
@@ -49,17 +49,21 @@
 .courses-ul {
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     list-style-type: disc;
     width: 100%;
     margin: 0 auto;
+    text-align:center;
+
 }
 
 .courses-ul li {
     display: flex;
-    justify-content: flex-start;
+    text-align: center;
     align-items: center;
     font-size: 20px;
-    margin: 1%;
+    margin: 0 1%;
+    padding: 5px 0;
 }
 
 .courses-p {
