--- a/creative-portfolio/src/components/TechnicalSkills/TechnicalSkills.css
+++ b/creative-portfolio/src/components/TechnicalSkills/TechnicalSkills.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 90%;
+    height: 100%;
     width: 100%;
 }
 
