--- a/creative-portfolio/src/containers/AboutMe/AboutMe.css
+++ b/creative-portfolio/src/containers/AboutMe/AboutMe.css
@@ -1,14 +1,15 @@
 .about-me-main-div {
-    height: 100%;
-    width: 100;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
 
-.about-me-main-div .about-me-div {
+.about-me-div {
     background-color: #1f131b;
     background-image: url("../../assets/images/about-me-background.png");
     height: 100%;
+    width: 100%;
     display: flex;
     color: white;
     justify-content: center;
