--- a/src/components/AboutMeHeader/AboutMeHeader.css
+++ b/src/components/AboutMeHeader/AboutMeHeader.css
@@ -15,7 +15,6 @@
     transition: 1.5s;
 }
 
-
 .arrow-div {
     width: 100%;
     height: 100%;
@@ -28,10 +27,32 @@
     background-image: url("https://www.transparenttextures.com/patterns/batthern.png");
     border: none;
 }
+
 .fa-arrow-alt-circle-right {
     margin:0 auto;
     width: 100%;
     color:rgba(255, 248, 248, 0.555);
     align-self: center;
     font-size: 100px;
+}
+
+@media screen and (max-width: 1130px) {  
+    .about-me-header {
+        flex-direction: column;
+        width: 100%;
+        height: 50%;
+    }
+    .about-me-header-active{
+        height: 60%;
+        width: 100%;
+        transition: 1.5s;
+    }
+    .fa-arrow-alt-circle-right {
+        transform: rotate(90deg);
+        font-size: 80px;
+    }
+    .arrow-div  {
+        height: 10%;
+        flex-direction: column;
+    }
 }
