--- a/src/components/HeaderList/HeaderList.css
+++ b/src/components/HeaderList/HeaderList.css
@@ -12,7 +12,6 @@
     transition: 1.0s;
 
 }
-
 .about-me-header-ul {
     display: none;
 }
@@ -38,3 +37,28 @@
     font-size: 25px;
 } 
 
+
+@media screen and (max-width: 1130px) {  
+    .about-me-header-ul-active {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 10%;
+        position: fixed;
+
+    }
+    .about-me-header-ul {
+        display: none;
+        height:20%;
+    }
+    .about-me-header-ul-li  {
+        height: 100%;
+        font-size: 14px;
+    }
+    .about-me-header-ul-li:hover {
+        color: white;
+        background-color: rgba(11, 35, 54, 0.664);
+        border-radius: 15px;
+        font-size: 20px;
+    }
+}
