--- a/src/components/Projects/Project/Project.css
+++ b/src/components/Projects/Project/Project.css
@@ -5,7 +5,7 @@
     align-items: center;
     margin: 0 auto;
     text-align: center;
-    height:90%;
+    height:100%;
     width: 50%;
 }
 
@@ -19,11 +19,12 @@
     justify-content: center;
     align-items: center;
     width: 70%;
-    font-size: 25px;
+    font-size: 22px;
+    letter-spacing: 1px;
 }
 
 .project-info-p {
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
     padding: 20px;
     width: 100%;
@@ -37,7 +38,19 @@
 }
 
 .extra-info-p {
-    font-weight: bold;
-    font-size: 22px;
+    border-top: 1px dotted rgba(245, 245, 245, 0.335);
+    font-weight: 500;
+    font-size: 20px;
     text-align: center;
+}
+
+@media screen and (max-width: 800px) {  
+    .project-info-div{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 700px) {  
+    .project-info-div{
+        width: 100%;
+    }
 }
