--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -1,34 +1,91 @@
 .courses-div {
-    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
 }
 .courses-ul {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    align-items: center;
     list-style-type: disc;
     width: 100%;
+    height: 60%;
     margin: 0 auto;
-    text-align:center;
-
+    text-align:justify;
 }
-
 .courses-ul li {
     display: flex;
-    text-align: center;
+    text-align: baseline;
+    justify-content: center;
     align-items: center;
     font-size: 20px;
-    margin: 0 1%;
-    padding: 5px 0;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 .courses-p {
     font-size: 25px;
-    width: 80%;
     margin: 0 auto;
     margin-bottom: 40px;
+    height: 10%;
+    width: 50%;
 }
 
-.courses-div:hover {
+.courses-ul li:hover {
     border: 1px dotted rgba(245, 245, 245, 0.335);
     background-color: rgba(51, 38, 47, 0.568);
+}
+
+
+@media screen and (max-width: 1530px) {  
+    .courses-p {
+        height: 20%;
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 1130px) {  
+    .courses-div  {
+        display: flex;
+        height: 100vh;
+        width: 70%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .courses-ul {
+        width: 100%;
+    }
+    .courses-ul li {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .courses-p {
+        height: 20%;
+        width: 70%;
+    }
+}
+
+
+@media screen and (max-width: 700px) {  
+    .courses-div  {
+        text-align: center;
+        width: 80%;
+        flex-direction: column;
+      
+    }
+    .courses-ul {
+        width: 100%;
+    }
+    .courses-ul li {
+        width: 100%;
+    }
+    .courses-p {
+        height: 30%;
+        width: 90%;
+    }
 }
