--- a/src/components/PersonalInfo/PersonalInfo.css
+++ b/src/components/PersonalInfo/PersonalInfo.css
@@ -47,21 +47,51 @@
     margin-left: 50px;
 }
 
-@media screen and (max-width: 700px) {  
+
+@media screen and (max-width: 1230px) {  
+    .personal-main-info-div {
+        text-align: center;
+        width: 80%;
+        flex-direction: column;
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 1030px) {  
+    .info-div {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+    .value-h2 {
+        width: 100%;
+        font-size: 25px;
+    }
+
+    .value-h2,
+    .key-h3{
+        text-align: center;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 730px) {  
+    .info-div {
+        flex-direction: column;
+        width: 100%;
+    }
+    .value-h2 {
+        width: 100%;
+        font-size: 20px;
+    }
     .key-h3 {
         font-size: 15px;
     }
-    .info-div {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 0 auto;
-        text-align: center;
-        width: 80%;
-    }
-
-    .personal-main-info-div {
-        display: flex;
-        flex-direction: row;
+    
+    .value-h2,
+    .key-h3{
+        padding: 5px 5px;
+        width: 100%;
     }
 }
