--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -12,25 +12,6 @@
     width: 100%;
 }
 
-.visit-btn {
-    width: 100%;
-    height: 60px;
-    font-size: 28px;
-    margin: 10px auto;
-    margin-top: 10px;
-    background-color: transparent;
-    border: 1px solid whitesmoke;
-    border-radius: 10px;
-    color: white;
-    cursor: pointer;
-    padding: 0 5px;
-}
-
-.visit-btn:hover {
-    background-color: #808588a6;
-    font-size: 30px;
-}
-
 
 @media screen and (max-width: 1130px) {  
     .projects-main-div {
@@ -43,8 +24,9 @@
 }
 
 
-@media screen and (max-width: 700px) {  
+@media screen and (max-width: 730px) {  
     .projects-main-div{
+        height: 100%;
         flex-direction: column;
     }
     .projects-div {
