--- a/src/components/AboutMeHeader/AboutMeHeader.css
+++ b/src/components/AboutMeHeader/AboutMeHeader.css
@@ -56,3 +56,18 @@
         flex-direction: column;
     }
 }
+@media screen and (max-width: 730px) {  
+    .about-me-header {
+        display: block;
+        flex-direction: column;
+        width: 100%;
+        height: 20%;
+    }
+    .about-me-header-active{
+        display: block;
+        height: 30;
+        width: 100%;
+        transition: 1.5s;
+    }
+    
+}
