--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -80,7 +80,7 @@
 @media screen and (max-width: 700px) {  
     .education-main-div {
         flex-direction: column;
-        height: 100%;
+        height: 100vh;
     }
     .education-main-div h4{
         font-size: 18px;
