--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -65,7 +65,7 @@
 @media screen and (max-width: 1230px) {  
     .education-main-div {
         flex-direction: column;
-        min-height: 100%;
+        height: 100vh;
     }
     .education-div  {
         width: 50%;
@@ -82,7 +82,20 @@
         flex-direction: column;
         height: 100vh;
     }
+
+    .education-div {
+        width: 100%;
+    }
     .education-main-div h4{
         font-size: 18px;
+    }
+
+    .education-div h3{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .education-div p {
+        width: 100%;
     }
 }
