--- a/src/containers/AboutMe/AboutMe.css
+++ b/src/containers/AboutMe/AboutMe.css
@@ -6,8 +6,8 @@
 }
 
 .about-me-div {
-    background-color: #1f131b;
-    background-image: url("../../assets/images/about-me-background.png");
+    background-color: #090a11;
+background-image: url("https://www.transparenttextures.com/patterns/binding-dark.png");
     height: 100%;
     width: 100%;
     display: flex;
