--- a/src/components/PersonalInfo/PersonalInfo.css
+++ b/src/components/PersonalInfo/PersonalInfo.css
@@ -5,11 +5,6 @@
     width: 100%;
 }
 
-.personal-info-div {
-    width: 100%;
-    height: 100%;
-}
-
 .info-div {
     display: flex;
     flex-direction: row;
@@ -23,8 +18,8 @@
     background-color: rgba(51, 38, 47, 0.568);
 }
 
-.value-h2,
-.key-h3{
+.value,
+.key{
     display: flex;
     margin: 10px;
     padding: 10px;
@@ -32,13 +27,13 @@
     justify-content: center;
 }
 
-.key-h3 {
+.key {
     display: flex;
     justify-content: flex-end;
     font-size: 20px;
     width: 50%;
 }
-.value-h2 {
+.value {
     display: flex;
     justify-content: flex-start;
     width: 50%;
@@ -51,7 +46,7 @@
 @media screen and (max-width: 1230px) {  
     .personal-main-info-div {
         text-align: center;
-        width: 80%;
+        width: 100%;
         flex-direction: column;
         height: 100vh;
     }
@@ -64,13 +59,13 @@
         align-items: center;
         width: 100%;
     }
-    .value-h2 {
-        width: 100%;
+    .value {
         font-size: 25px;
+        width: 100%;
     }
 
-    .value-h2,
-    .key-h3{
+    .value,
+    .key{
         text-align: center;
         justify-content: center;
     }
@@ -79,19 +74,22 @@
 @media screen and (max-width: 730px) {  
     .info-div {
         flex-direction: column;
+        align-items: center;
         width: 100%;
+        height: 10%;
     }
-    .value-h2 {
-        width: 100%;
+    .value {
         font-size: 20px;
     }
-    .key-h3 {
+    .key {
         font-size: 15px;
     }
     
-    .value-h2,
-    .key-h3{
-        padding: 5px 5px;
-        width: 100%;
+    .value,
+    .key{
+        min-width: 100%;
+        text-align: center;
+        padding: 0;
+        margin: 0 auto;
     }
 }
