--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -75,17 +75,18 @@
     .courses-div  {
         text-align: center;
         width: 80%;
-        flex-direction: column;
-      
+        flex-direction: column; 
+        height: 100vh;
     }
     .courses-ul {
         width: 100%;
+        height: 50%;
     }
     .courses-ul li {
         width: 100%;
     }
     .courses-p {
-        height: 30%;
+        height: 25%;
         width: 90%;
     }
 }
