--- a/src/components/TechnicalSkills/TechnicalSkills.css
+++ b/src/components/TechnicalSkills/TechnicalSkills.css
@@ -40,9 +40,9 @@
     font-size: 20px;
     color: white;
     padding: 2%;
-    list-style: circle;
-
 }
+
+
 
 .ul-div-h1{
     margin-left: 50px;
@@ -69,22 +69,35 @@
     }
     .ul-div ul{
         flex-direction: row;
+        justify-content: center;
+        padding: 0;
         width: 100%;
     }
 }
 
 
 @media screen and (max-width: 730px) {  
+    .technical-skills-div {
+        width: 100%;
+        justify-content: center;
+        text-align: center;
+        height: 100vh;
+    }
     .ul-div {
         flex-direction: column;
-        justify-content: center;
+        margin: auto 0;
+        min-height: 25%;
     }
     .ul-div ul{
+        margin: auto 0;
         flex-direction: column;
+        text-align: center;
+        width: 100%;
+        padding: 0;
     }
     .ul-div ul li{
         text-align: center;
-        margin: 0 25px;
+        margin: 0 auto;
     }
 
     .ul-div-h1{
@@ -93,10 +106,6 @@
         justify-content: flex-start;
         width: 100%;
         font-size: 25px;
+        height: 30%;
     }
-}
-
-.try {
-    border: 1.5px dashed rgba(255, 255, 255, 0.418);
-    border-radius: 15px;
 }
