--- a/src/components/Projects/Project/Project.css
+++ b/src/components/Projects/Project/Project.css
@@ -1,12 +1,11 @@
 .project-info-div {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    text-align: center;
-    height:100%;
-    width: 50%;
+    justify-content: center;
+    flex-direction: column;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
 .project-info-div:hover {
@@ -19,8 +18,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    font-size: 22px;
+    font-size: 26px;
     letter-spacing: 1px;
+    margin: 5px auto;
 }
 
 .project-info-p {
@@ -29,8 +29,10 @@
     padding: 20px;
     width: 100%;
     letter-spacing: 2px;
-    min-height: 65%;
+    /* text-align: center; */
+
 }
+
 
 .project-info-content {
     height: 80%;
