--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -16,6 +16,24 @@
     margin: 0 auto;
 }
 
+::-webkit-scrollbar {
+    width: 25px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 20px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(255, 243, 243, 0.329);
+    border-radius: 20px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover{
+    background-color: rgb(200, 195, 195);
+  }
+
 
 @media screen and (max-width: 1130px) {  
     .projects-main-div {
