--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -52,7 +52,8 @@
         flex-direction: column;
     }
     .projects-div {
+        width: 100%;
         flex-direction: column;
-            overflow-y: hidden;
+        overflow-y: hidden;
     }
 }
